<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:scaleType="fitXY"
        android:src="@drawable/header_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/imageView3"
        android:layout_width="130dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/logo_simetalia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/futura"
        android:gravity="center_horizontal"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/pink"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.01999998" />

    <EditText
        android:id="@+id/et_loginEmail"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/input_login"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="5dp"
        android:fontFamily="@font/futura"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.100000024" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til"
        android:layout_width="250dp"
        android:layout_height="55dp"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_loginEmail"
        app:layout_constraintVertical_bias="0.060000002"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/et_loginPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/input_login"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:drawablePadding="5dp"
            android:fontFamily="@font/futura"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:background="@drawable/button_tutorial"
        android:fontFamily="@font/futura"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/silahkan_login_sesuai_dengan_akun_yang_telah_diberikan"
        android:textAlignment="center"
        android:textColor="@color/pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login" />


</androidx.constraintlayout.widget.ConstraintLayout>