<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:focusable="true">

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/form_input_bumil" />

    <ImageView
        android:id="@+id/btn_backKunjunganLama"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/ic_baseline_keyboard_arrow_left_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:fontFamily="@font/futura"
        android:text="Form Kunjungan Lama"
        android:textColor="@color/pink"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_simpanDataKunjunganLama"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:background="@drawable/btn_simpan"
        android:drawableLeft="@drawable/ic_baseline_save_24"
        android:fontFamily="@font/futura"
        android:padding="10dp"
        android:text="@string/simpan"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="120dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/futura"
                android:text="Input Data Subyektif"
                android:textColor="@color/pink"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/futura"
                        android:text="@string/tanggal_kunjungan"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/et_tambahKunjunganTglKunjunganLama"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:background="@drawable/input_bumil"
                        android:drawableEnd="@drawable/ic_baseline_calendar_today_24"
                        android:drawableRight="@drawable/ic_baseline_calendar_today_24"
                        android:focusableInTouchMode="false"
                        android:fontFamily="@font/calibri"
                        android:padding="12dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/futura"
                        android:text="@string/keluhan_utama"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/et_tambahKunjunganKeluhanUtamaLama"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:background="@drawable/input_bumil"
                        android:fontFamily="@font/calibri"
                        android:padding="12dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/futura"
                        android:text="@string/keluhan_tambahan"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/et_tambahKunjunganKeluhanTambahanLama"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:background="@drawable/input_bumil"
                        android:padding="10dp" />

                </LinearLayout>
            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>